feature selection with any cross validation method, corrected kmedoids name

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "pandas",
     "torch",
     "metaheuristic-designer",
+    "hundred-hammers",
     "enlighten",
     "sklearn-neuro-evolution"
 ]
